--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ h2,h3,h4 {
 }
 p {
     text-align: justify;
+    margin-top: 3%;
 }
 hr {
     width: 70%;
@@ -282,7 +283,6 @@ footer p {
     }
     .topics h5 {
         margin-bottom: 5%;
-        
     }
 }
 @media (max-width: 560px) {
